syntax = "proto3";

option csharp_namespace = "LoteTablas.Grpc.Definitions";

package CardService;

service Card {
    
    rpc GetCard (GetCardRequest) returns (CardModel);
  
    rpc GetCards (GetCardsRequest) returns (CardsReply);

}

message GetCardRequest {
	string cardId = 1;
}

message CardModel {
  string cardId = 1;
  string name = 2;
  string description = 3;
  string imagePath = 4;
  string creatorUserId = 5;
}

message GetCardsRequest {
	repeated string cardIds = 1;
}

message CardsReply {
	repeated CardModel cards = 1;
}